# SPHerture

./: .gitignore  DC.py  Julia.py  MyMarkers.py  MyOpenGL.py  README.md  SPH_Viewer.py  VP.py  VPJulia.py  display.py  gl.py  hdf5.py  plt.py  pyproject.toml  slider.py  various.py
Env/: pyvenv.cfg
