[tool.poetry]
name = "spherture"
version = "0.1.0"
description = ""
authors = ["LauzikasMartynas <77410410+LauzikasMartynas@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wxpython = "^4.2.1"
matplotlib = "^3.8.3"
numba = "^0.59.0"
scipy = "^1.12.0"
h5py = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
